tests/types_first_destructuring/types_first_destructuring.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:2

Cannot cast `a` to string because number [1] is incompatible with string [2].

   test.js:5:2
   5| (a: string);
       ^

References:
   destr.js:4:20
   4| module.exports = { a, b: xb };
                         ^ [1]
   test.js:5:5
   5| (a: string);
          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:2

Cannot cast `b` to string because number [1] is incompatible with string [2].

   test.js:7:2
   7| (b: string);
       ^

References:
   destr.js:4:26
   4| module.exports = { a, b: xb };
                               ^^ [1]
   test.js:7:5
   7| (b: string);
          ^^^^^^ [2]



Found 2 errors
